--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -124,7 +124,7 @@
                     </div>
 
                     {# BODEGA #}
-                    <a class="nav-link" href="{% url 'core:home' %}">
+                    <a class="nav-link" href="{% url 'public:bodega' %}">
                         <div class="sb-nav-link-icon icon_menu"><i class="fas fa-warehouse"></i></div>
                         Bodegas
                     </a>
